# capone-core

./: .clang  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  announce.proto  appveyor.yml  client.c  common.c  config.h.in  config.mk  cpn-bench-input.c  cpn-bench-latency.c  cpn-bench-throughput.c  cpn-client.c  cpn-derive.c  cpn-discover-responder.c  cpn-discover.c  cpn-genkey.c  cpn-server.c  discover.proto  log.c  makefile  probe.proto  sd-bench-input.c  sd-bench.c  sd-connect-responder.c  sd-connect.c  sd-discover-responder.c  sd-discover.c  sd-genkey.c  sd-latency.c  sd-query-responder.c  sd-query.c  sd-server.c  sd-test.c  service.c
cmake/: FindProtobufC.cmake
config/: client.conf  config.clang.mk  config.gcc.mk  server.conf  whitelist.conf
include/: capone.h
include/capone/: acl.h  buf.h  caps.h  cfg.h  channel.h  client.h  cmdparse.h  common.h  global.h  keys.h  list.h  log.h  opts.h  parameter.h  proto.h  protobuf.h  sd.h  server.h  service.h  session.h  socket.h
include/capone/crypto/: asymmetric.h  hash.h  sign.h  symmetric.h
include/capone/proto/: capabilities.proto  connect.proto  encryption.proto
include/capone/services/: capabilities.h  exec.h  fs.h  invoke.h  synergy.h  xpra.h
lib/: acl.c  acl.h  bench.c  bench.h  buf.c  caps.c  caps.h  cfg.c  cfg.h  channel.c  channel.h  client.c  cmdparse.c  common.c  common.h  global.c  keys.c  keys.h  list.c  log.c  log.h  opts.c  parameter.c  parameter.h  proto-enc.c  proto.c  proto.h  protobuf.c  schannel.c  schannel.h  sd.h  server.c  server.h  service.c  service.h  session.c  session.h  socket.c
lib/crypto/: asymmetric.c  hash.c  sign.c  symmetric.c
lib/service/: capabilities.c  exec.c  exec.h  invoke.c  invoke.h  test.c  test.h  x2x.c  x2x.h  xpra.c  xpra.h
lib/services/: capabilities.c  exec.c  fs.c  invoke.c  synergy.c  xpra.c
presentation/: .gitignore  presentation.tex
presentation/resources/: template.tex
proto/: capabilities.proto  channel.proto  connect.proto  discovery.proto  encryption.proto  envelope.proto  query.proto  test.proto
scripts/: Doxyfile  bench.sh  build.sh  capabilities.sh  deps.sh  docs.sh  input.sh  invoke.sh  latency.sh  server.conf  test.sh
scripts/config/: client.conf
service/: capabilities.c  capabilities.h  exec.c  exec.h  invoke.c  invoke.h  synergy.c  synergy.h  test.c  test.h  xpra.c  xpra.h
test/: CMakeLists.txt  acl.c  bench.c  bench.h  caps.c  cfg.c  cfg.h  channel.c  channel.h  cmdparse.c  common.c  common.h  config.h.in  cpn-bench-input.c  cpn-bench-latency.c  cpn-bench-throughput.c  cpn-test.c  keys.c  list.c  opts.c  parameter.c  proto.c  server.c  server.h  service.c  session.c  test-helper.c  test-service.c  test-service.h  test.c  test.h  test.proto
test/lib/: acl.c  buf.c  caps.c  channel.c  common.c  global.c  keys.c  list.c  opts.c  proto.c  protobuf.c  service.c  session.c  socket.c  test-service.c  test.proto
test/lib/crypto/: asymmetric.c  sign.c  symmetric.c
test/lib/service/: capabilities.c  exec.c  invoke.c
